[SCRUM-3799] Fixed alignment issue on the navigation bar on mobiles.

--- a/src/ui.sass
+++ b/src/ui.sass
@@ -331,15 +331,19 @@ body
         .navBottomPanel
             +flex
             flex: 0 0 auto
-            height: 5em
             justify-content: space-around
+            margin-top: 1px solid #999999
+            padding: 0.2em
 
             @media screen and (min-width: $phone-bp)
                 display: none
 
+            .navBottomPanelItem
+                +flex
+                align-items: center
+
             button
-                margin-right: 0.6em
-                margin-left: 0.6em
+                margin: 0 0.6em 0 0.6em
 
         .detailCenterPanel
             +flex(column)
